2010-04-16
Replaced all occurances of href() with url()

2010-04-15
Discovered that network timeouts make the libraries for archives and movies hang up really badly
Fixed some bugs in the Live template
	now check if more variables are missing and doesn't cause as many errors
Fixed some bugs in the search.php plugin
	Now fully implements query_alter_

2010-04-14
Fixed some bugs in the live/index.php template
	Variables should still be checked to see if they are set incase something goes wrong
Fixed many bugs in search.php plugin
Added to core.php plugin
	Now directory separators can be used in the path to specify which plugin you would like to use

2010-04-12
Worked on documentation site
Worked on monolithicmedia site
Added functions for a plugin to alter the mysql query with input from it's variables
	This allows for abstracting certain parts of the db_file::get() API

2010-04-07
Worked on monolithicmedia.org website.

2010-04-06
Removed defaulting functionality from theme() in template.php plugin
	All templates must now implement everything they need by themselves
Started WMP qooXdoo template
Worked on Live theme
Worked on plain theme

2010-04-05
Removed all unnessicary template files
Worked on displaying admin section
	Converted install and plugins to use default admin header

2010-04-04
Worked on Admin section
	Added admin.php plugin for loading all of the admin scripts
Worked on tools admin plugin
	Now dynamically loads tool set
Worked on many templates
	wpl playlist, xml info list in the base template, tools, admin section
Worked on users
Worked on list plugins, now has a pretty display in the live template

2010-04-03
Worked on converting templates to PHP
	Login, m3u, rss, search, plain
Worked on cron.php
	Made simpler by getting rid of state and just using a single directory path to resume
Watch module now detects if folder is in watch list for sub directories also!
	Using LEFT("<some watched subfolder>", LENGTH(Filepath)) = Filepath;