@@ -549,15 +549,13 @@ function output_admin_install($request)
 	
 	if(isset($request['install_next']))
 	{
-		header('Location: ' . url('plugin=admin_install&install_step=' . ($request['install_step'] + 1), true));
-		exit;
+		goto('plugin=admin_install&install_step=' . ($request['install_step'] + 1));
 	}
 
 	if(isset($_POST) && count($_POST) > 0)
 	{
 		if(isset($_POST['dberror'])) $_SESSION['dberror'] = $_POST['dberror'];
-		header('Location: ' . url('plugin=admin_install&install_step=' . $request['install_step'], true));
-		exit;
+		goto('plugin=admin_install&install_step=' . $request['install_step']);
 	}
 	
 	register_output_vars('post', $post);
