@@ -36,7 +36,7 @@ function theme_live_install()
 											{
 											?>
 											<li><img src="/?plugin=admin_install&install_image=carat" class="crumbsep" alt="&gt;" /></li>
-											<li><a href="<?php echo generate_url('plugin=admin_install&install_step=' . $i); ?>">Step <?php echo $i; ?></a></li>
+											<li><a href="<?php echo url('plugin=admin_install&install_step=' . $i); ?>">Step <?php echo $i; ?></a></li>
 											<?php
 											}
 											?>
@@ -352,7 +352,7 @@ function output_test_db_install($result, $variable)
 	$DATABASE = new database($dsn);
 	?>
 	<body onload="top.document.getElementById('loading2').style.display = 'none'; top.document.getElementById('install').style.height=document.getElementById('installtable').clientHeight+'px';">
-	<form action="<?php echo generate_url('plugin=admin_install&install_step=3'); ?>" method="post" target="_top">
+	<form action="<?php echo url('plugin=admin_install&install_step=3'); ?>" method="post" target="_top">
 	<?php
 	print_fields();
 	?>
@@ -397,7 +397,7 @@ function output_test_db_test($result, $variable)
     <td class="title fail">Access to Database</td>
     <td>
     The connection manager reported the following error:<br /><?php echo $e->userinfo; ?>.
-    <form action="<?php echo generate_url('plugin=admin_install&install_step=3'); ?>" method="post" target="_top">
+    <form action="<?php echo url('plugin=admin_install&install_step=3'); ?>" method="post" target="_top">
     <input type="hidden" name="install_dberror" value="<?php echo $e->userinfo; ?>" />
 	<?php
 	print_fields();
@@ -422,7 +422,7 @@ function output_test_db_test($result, $variable)
 	{
 		
     ?>
-<body onLoad="top.document.getElementById('loading1').style.display = 'none'; top.document.getElementById('test').style.height=document.getElementById('testtable').clientHeight+'px'; top.document.getElementById('loading2').style.display='inline'; top.document.getElementById('install').src='<?php echo generate_url('plugin=admin_install&install_step=5.2'); ?>'">
+<body onLoad="top.document.getElementById('loading1').style.display = 'none'; top.document.getElementById('test').style.height=document.getElementById('testtable').clientHeight+'px'; top.document.getElementById('loading2').style.display='inline'; top.document.getElementById('install').src='<?php echo url('plugin=admin_install&install_step=5.2'); ?>'">
 <table id="testtable" border="0" cellpadding="0" cellspacing="0">
 	<tr>
     <td class="title">Access to Database</td>
@@ -1131,7 +1131,7 @@ function output_test_db_check()
 {
 	?>
 	<div id="loading1"><img src="/?plugin=admin_install&install_image=loading" alt="" /> Testing...</div>
-	<iframe name="test" id="test" frameborder="0" width="100%" src="<?php echo generate_url('plugin=admin_install&install_step=5.1'); ?>"></iframe>
+	<iframe name="test" id="test" frameborder="0" width="100%" src="<?php echo url('plugin=admin_install&install_step=5.1'); ?>"></iframe>
 	<div id="loading2" style="display:none;"><img src="/?plugin=admin_install&install_image=loading" alt="" /> Installing...</div>
 	<iframe name="test" id="install" frameborder="0" width="100%" src=""></iframe>
 	</script>
