@@ -3,7 +3,7 @@
 function theme_plain_login()
 {
 	?>	
-	<form action="<?php echo generate_url('plugin=users&users=login' . (isset($GLOBALS['templates']['vars']['return'])?('&return=' . urlencode($GLOBALS['templates']['vars']['return'])):'')); ?>" method="post">
+	<form action="<?php echo url('plugin=users&users=login' . (isset($GLOBALS['templates']['vars']['return'])?('&return=' . urlencode($GLOBALS['templates']['vars']['return'])):'')); ?>" method="post">
 	
 		Username: <input type="text" name="username" value="<?php print isset($GLOBALS['templates']['vars']['username'])?$GLOBALS['templates']['vars']['username']:''; ?>" /><br />
 		Password: <input type="password" name="password" value="" /><br />
@@ -16,7 +16,7 @@ function theme_plain_login()
 function theme_plain_register()
 {
 	?>	
-	<form action="<?php echo generate_url('plugin=users&users=register'); ?>" method="post">
+	<form action="<?php echo url('plugin=users&users=register'); ?>" method="post">
 	
 		Username: <input type="text" name="username" value="<?php print isset($GLOBALS['templates']['vars']['username'])?$GLOBALS['templates']['vars']['username']:''; ?>" /><br />
 		E-mail: <input type="text" name="email" value="<?php print isset($GLOBALS['templates']['vars']['email'])?$GLOBALS['templates']['vars']['email']:''; ?>" /><br />
