@@ -83,9 +83,9 @@ else
 		
 		?>
 		<name><?php echo htmlspecialchars(utf8_encode($file['Filename'])); ?></name>
-		<icon><?php echo generate_url('plugin=convert&id=' . dirname($file['id']) . '&filename=folder.jpg' . '&convert=jpg&theight=100&twidth=100', false, true); ?></icon>
+		<icon><?php echo url('plugin=convert&id=' . dirname($file['id']) . '&filename=folder.jpg' . '&convert=jpg&theight=100&twidth=100', false, true); ?></icon>
 		<path><?php echo htmlspecialchars(utf8_encode($file['Filepath'])); ?></path>
-		<link><?php echo generate_url('file/' . $_REQUEST['cat'] . '/' . $file['id'] . '/' . basename($file['Filepath']), false, true); ?></link>
+		<link><?php echo url('file/' . $_REQUEST['cat'] . '/' . $file['id'] . '/' . basename($file['Filepath']), false, true); ?></link>
 		<short><?php echo htmlspecialchars(utf8_encode(substr($file['Filename'], 0, 13))) . '...'; ?></short>
 		<?php
 			if(handles($file['Filepath'], 'archive'))
